Added topic centred navigation links

--- a/web/viewerMeta.html
+++ b/web/viewerMeta.html
@@ -207,6 +207,8 @@ See https://github.com/adobe-type-tools/cmap-resources
               <div class="outerCenter">
                 <div class="innerCenter" id="toolbarViewerMiddle">
                 <!-- here -->
+                <div id="meta-prev">PREVIOUS MENTION<img width="20px"  src="images/prev_btn.png" /></div>
+                <div id="meta-next"><img width="20px" src="images/next_btn.png" />NEXT MENTION</div>
                 </div>
               </div>
             </div>
