--- a/web/viewerMeta.html
+++ b/web/viewerMeta.html
@@ -202,7 +202,7 @@ See https://github.com/adobe-type-tools/cmap-resources
               </div>
               <div id="toolbarViewerRight">
                   <!--here-->
-                </button>
+                  <div id="meta-key" class="disabled"><img width="20px"  src="images/hightw.png" /></div>
               </div>
               <div class="outerCenter">
                 <div class="innerCenter" id="toolbarViewerMiddle">
