next and previous highlight button only active if there are highlights available displaying the first highlighted page when document loads, if document doesn't have highlights it should show the last page user looked at if key_page is selected, go to the first highlighted key page

--- a/web/viewerMeta.html
+++ b/web/viewerMeta.html
@@ -202,7 +202,7 @@ See https://github.com/adobe-type-tools/cmap-resources
               </div>
               <div id="toolbarViewerRight">
                   <!--here-->
-                  <div id="meta-key" class="disabled"><img width="20px"  src="images/hightw.png" /></div>
+                  <div id="meta-key" class="hide"><img width="20px"  src="images/hightw.png" /></div>
               </div>
               <div class="outerCenter">
                 <div class="innerCenter" id="toolbarViewerMiddle">
